unpackaged/main/default/objects/SDO_Community_Idea_Team__c/SDO_Community_Idea_Team__c.object-meta.xml
<CustomObject>
    <description>What: Idea Team for Community demo.</description>
    <label>Idea Team</label>
    <nameField>
        <label>Role</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Idea Team</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>