unpackaged/main/default/objects/SDO_Community_Idea_Team__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If the project team member doesn&#39;t exist as a user in Salesforce you can add them as a contact.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>R00N8a00000BTyLxEAL</relationshipName>
    <type>Lookup</type>
</CustomField>