unpackaged/main/default/objects/SDO_Community_Idea_Team__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Use this feeling to track individuals participating on the project team.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00N8a00000BTyLbEAL</relationshipName>
    <type>Lookup</type>
</CustomField>